@@ -5,4 +5,9 @@
 # -z: compresses the data during transfer
 # Source: Local plugin directory at /home/andrew/workspace/84em/app/public/wp-content/plugins/84em-custom/
 # Destination: Remote server (84em) at /www/g84emcom_126/public/wp-content/plugins/84em-custom
-rsync -avz --exclude 'deploy.sh' --exclude '.git' --exclude 'node_modules' /home/andrew/workspace/84em/app/public/wp-content/plugins/84em-custom/ 84em:/www/g84emcom_126/public/wp-content/plugins/84em-custom
+
+echo "Updating changelog before deployment..."
+./update-changelog.sh
+
+echo "Deploying to remote server..."
+rsync -avz --exclude 'deploy.sh' --exclude '.git' --exclude 'node_modules' --exclude 'update-changelog.sh' --exclude 'tag-and-changelog.sh' /home/andrew/workspace/84em/app/public/wp-content/plugins/84em-custom/ 84em:/www/g84emcom_126/public/wp-content/plugins/84em-custom
