@@ -5,6 +5,10 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [Unreleased]
+
+- Update changelog and version for v1.0.3 (661201c)
+
 ## [v1.0.3] - 2025-07-17
 
 - Update changelog for v1.0.2 (a5c7513)
